--- a/index.html
+++ b/index.html
@@ -17,8 +17,13 @@
 	<div class="ui container">
 		<div class="row">
 			<div class="ui grid">
-				<h1 class="ui header">Flower Sheet</h1>
-				<h3 class="ui header">No</h3>
+				<h1 class="ui header">
+					Flower Sheet
+				</h1>
+				<h3 class="ui header">
+					Easy and flexible to get data from spreadsheet and post data to it.<br>
+					Ajax is sufficient, no hidden iframe, no need a google form, doGet() data explosure elimated.
+				</h3>
 			</div>
 		</div>
 		<div class="row">
@@ -51,6 +56,5 @@
 	</div>
 	<script src="jquery-1.11.1.min.js"></script>
 	<script src="main.js"></script>
-	<script src="semantic/dist/semantic.js"></script>
 </body>
 </html>
